--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="css/main.css">
     <title>Ristorante Con Fusion</title>
 
 </head>
@@ -37,7 +37,7 @@
                 <a href="#" class="nav-link"><span class="fa fa-list fa-lg"></span> Menu</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link"><span class="fa fa-address-card fa-lg"></span> Contact</a>
+                <a href="./contactus.html" class="nav-link"><span class="fa fa-address-card fa-lg"></span> Contact</a>
             </li>
 
            </ul>
