--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="Navbar">
-           <a href="#" class="navbar-brand mr-auto">Ristorante Con Fusion</a> 
+           <a href="#" class="navbar-brand mr-auto"><img src="img/logo.png" width="41" height="30" alt=""></a> 
            <ul class="navbar-nav mr-auto">
                <li class="nav-item active">
                    <a href="#" class="nav-link"><span class="fa fa-home fa-lg"></span> Home</a>
@@ -52,7 +52,8 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -63,9 +64,16 @@
             <div class="col col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
+
             <div class="col col-sm order-sm-first col-md">
-                <h2>Uthappizza</h2>
+                <div class="media">
+                <img src="img/uthappizza.png" alt="uthappizza" class="d-flex mr-3 align-self-center img-thumbnail">
+                <div class="media-body">    
+                <h2 class="mt-0">Uthappizza</h2>
                 <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                </div>
+                </div>
+
             </div>
         </div>
 
@@ -85,9 +93,14 @@
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
-                <h2>Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                <div class="media">
+                    <img src="img/alberto.png" alt="Alberto Soummay" class="align-self-center img-thumbnail d-flex mr-3 img-top">
+                    <div class="media-body">
+                       <h2 class="mt-0">Alberto Somayya</h2>
+                       <h4>Executive Chef</h4>
+                       <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                    </div>    
+                </div>    
             </div>
         </div>
     </div>
