--- a/index.html
+++ b/index.html
@@ -103,6 +103,63 @@
                 </div>    
             </div>
         </div>
+
+
+        <div class="row row-content">
+            <div class="col-12 offset-2 col-sm-8">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+
+                    <div class="card-body">
+                        <form action="">
+                            <div class="row">
+                            <legend class="col-form-label col-sm-2 pt-0">Number of Guests</legend>
+                            <div class="col-sm-10">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                <label class="form-check-label" for="inlineRadio2">2</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                                <label class="form-check-label" for="inlineRadio3">3</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
+                                <label class="form-check-label" for="inlineRadio3">4</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
+                                <label class="form-check-label" for="inlineRadio3">5</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
+                                <label class="form-check-label" for="inlineRadio3">6</label>
+                            </div>  
+                            </div>
+                            </div>
+
+                            <div class="form-row row">
+<div class="col-12 col-sm-2">
+                                <label for="date and time">Date and Time</label></div>
+                                <div class="col-12 col-sm-5">
+                                  <input type="date" class="form-control" placeholder="date">
+                                </div>
+                                <div class="col-12 col-sm-5">
+                                  <input type="time" class="form-control" placeholder="time">
+                                </div>
+<div class="row"></div>
+                                <div class="col-12 offset-2 my-3">
+                                    <button type="submit" class="btn btn-primary mb-2">Reserve</button>
+                                  </div>    </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer class="footer">
