--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
+
+                <a href="#Reserve" type="button" class="btn btn-warning text-dark align-self-center">Reserve</a>
             </div>
         </div>
     </header>
@@ -88,7 +90,7 @@
             </div>
         </div>
 
-        <div class="row row-content align-items-center">
+        <div class="row row-content align-items-center" id="Reserve">
             <div class="col col-sm-4 order-sm-last col-md-3">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
