--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
 
-                <a href="#Reserve" type="button" class="btn btn-warning text-dark align-self-center">Reserve</a>
+                <a href="#Reserve" type="button" class="btn btn-warning btn-block text-dark align-self-center col-sm-3">Reserve Table</a>
             </div>
         </div>
     </header>
@@ -72,7 +72,7 @@
                 <img src="img/uthappizza.png" alt="uthappizza" class="d-flex mr-3 align-self-center img-thumbnail">
                 <div class="media-body">    
                 <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT </span> <span class="badge badge-pill badge-secondary"> $4.99</span></h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                 </div>
                 </div>
 
@@ -85,12 +85,13 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
             </div>
+            <img src="img/buffet.png" alt="buffet" class="img-thumbnail d-flex ml-3 align-self-center">
         </div>
 
-        <div class="row row-content align-items-center" id="Reserve">
+        <div class="row row-content align-items-center">
             <div class="col col-sm-4 order-sm-last col-md-3">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
@@ -100,21 +101,21 @@
                     <div class="media-body">
                        <h2 class="mt-0">Alberto Somayya</h2>
                        <h4>Executive Chef</h4>
-                       <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                       <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
                     </div>    
                 </div>    
             </div>
         </div>
 
 
-        <div class="row row-content">
-            <div class="col-12 offset-2 col-sm-8">
-                <div class="card">
+        <div class="row row-content align-items-center " id="Reserve" >
+            <div class="col-12 offset-2 col-sm-8 align-items-center">
+                <div class="card align-self-center">
                     <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
 
                     <div class="card-body">
                         <form action="">
-                            <div class="row">
+                            <div class="form-group row align-items-center">
                             <legend class="col-form-label col-sm-2 pt-0">Number of Guests</legend>
                             <div class="col-sm-10">
                             <div class="form-check form-check-inline">
@@ -144,7 +145,7 @@
                             </div>
                             </div>
 
-                            <div class="form-row row">
+                            <div class="form-row row align-items-center">
 <div class="col-12 col-sm-2">
                                 <label for="date and time">Date and Time</label></div>
                                 <div class="col-12 col-sm-5">
