--- a/aboutus.html
+++ b/aboutus.html
@@ -1,4 +1,4 @@
-
+<!--restaurant website-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -123,7 +123,10 @@
             <div class="col">
                 <h2>Corporate Leadership</h2>
 
-               <ul class="nav nav-tabs">
+
+<!--this is for tab-navigation-->
+
+               <!-- <ul class="nav nav-tabs">
                    <li class="nav-item">
                        <a class="nav-link active" href="#peter" role="tab" data-toggle="tab">Peter Pan,CEO</a>
 
@@ -144,8 +147,10 @@
 
                 </li>
 
-               </ul>
-                <div class="tab-content">
+               </ul> -->
+                
+               
+               <div id="acordian">
                     <div role="tabpanel" class="tab-pane fade active show" id="Peter">
                     <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
                 <div class="d-none d-sm-block">
